# Pokemon-SDL2

./: .gitignore  README.md
Pokemon/: .cproject  .project  CMakeLists.txt  build.sh
Pokemon/code/headers/: PokemonTypeConverter.hpp  animatedSprite.hpp  animatedTile.hpp  buttonAction.hpp  graphics.hpp  input.hpp  level.hpp  menuBox.hpp  music.hpp  player.hpp  pokemon.hpp  pokemonBag.hpp  rectangle.hpp  startScreen.hpp  textBox.hpp  utils.hpp
Pokemon/code/headers/Fight/: handleAttack.hpp  stufenSystem.hpp
Pokemon/code/src/: GUI.cpp  attacke.cpp  game.cpp  input.cpp  level.cpp  levelItem.cpp  main.cpp  player.cpp  pokemonBag.cpp  sprite.cpp  startScreen.cpp  textBox.cpp  tile.cpp
Pokemon/code/src/Fight/: HandleAttack.cpp  fightScene.cpp  fightTextBox.cpp
Pokemon/content/maps/: PokeLabor.tmx  Route1.tmx  Tileset2.tsx  Tileset2tsx.tsx  TilesetIndoor.tsx  home_EG1.tmx  startTown.tmx
Pokemon/content/sprites/Pokemon/: größen.txt
Pokemon/source/headers/: GUI.hpp  animatedSprite.hpp  attacke.hpp  attacken.hpp  btnActionHelper.hpp  buttonAction.hpp  door.hpp  font.hpp  game.hpp  globals.hpp  level.hpp  levelItem.hpp  menuBox.hpp  music.hpp  npc.hpp  player.hpp  pokemon.hpp  pokemonBag.hpp  pokemonFactory.hpp  random.hpp  rectangle.hpp  slope.hpp  sprite.hpp  startScreen.hpp  textBox.hpp  tile.hpp  utils.hpp
Pokemon/source/headers/Fight/: damage.hpp  fight.hpp  fightScene.hpp  fightTextBox.hpp  (+1 more)
Pokemon/source/src/: GUI.cpp  animatedTile.cpp  animtedSprite.cpp  attacke.cpp  attacken.cpp  btnActionHelper.cpp  buttonAction.cpp  game.cpp  graphics.cpp  level.cpp  levelItem.cpp  menuBox.cpp  music.cpp  npc.cpp  player.cpp  pokemon.cpp  pokemonBag.cpp  pokemonFactory.cpp  sprite.cpp  startScreen.cpp  textBox.cpp
(+43 files in other folders)
